fix: resolve merge conflicts